@transactional rollback updated in the pgm